--- a/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
@@ -66,7 +66,7 @@
             }
             else
             {
-                <h2> ¡No hay marcas registradas! </h2>
+                <h2> ¡No hay clientes registrados! </h2>
 
             }
 
