--- a/SistemaInventario/Views/Proveedores/EditOrAddProveedores.cshtml
+++ b/SistemaInventario/Views/Proveedores/EditOrAddProveedores.cshtml
@@ -8,7 +8,7 @@
             @using (Html.BeginForm())
             {
                 @Html.HiddenFor(x => x.idProveedor)
-<div class="formulario proveedores">
+<div class="formulario proveedores" style="height: 400px !important">
     @if (Model.idProveedor > 0)
     {
         <h3>Editar proveedor</h3>
