--- a/SistemaInventario/Views/Carrito/MostrarCarrito.cshtml
+++ b/SistemaInventario/Views/Carrito/MostrarCarrito.cshtml
@@ -12,7 +12,7 @@
 
 @if (Model.Count() > 0)
 {
-    <div class="containerCards cars">
+    <div class="containerCards cars" id="cards">
 
         @foreach (var auto in Model)
         {
@@ -82,12 +82,6 @@
 
     </center>
 }
-else
-{
-    <h2>No hay autos seleccionados</h2>
-    <center><h2 class="cajaCompra"><i class="fas fa-shopping-cart"></i></h2></center>
-
-}
 @*------------------------------------Mostrar BOTON SOLO CUANDO HAYA PRODUCTO EN CARRITO-----------------------------------------*@
 @if (TotalAPagar > 0)
 {
@@ -98,9 +92,9 @@ else
 }
 else
 {
-    <h2>No hay autos seleccionados</h2>
-    <center><h2 class="cajaCompra"><i class="fas fa-shopping-cart"></i></h2></center>
-
+        <h2>No hay autos seleccionados</h2>
+        <center><h2 class="cajaCompra"><i class="fas fa-shopping-cart"></i></h2></center>
+        <script>document.getElementById("cards").style.display="none"</script>
 }
 @*---------------------------------------FUNCIÓN PARA REALIZAR LA COMPRA------------------------------------------------------------*@
 <script>
