--- a/SistemaInventario/Views/Clientes/ComprasClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/ComprasClientes.cshtml
@@ -5,10 +5,11 @@
     ViewBag.Title = "MostrarProductos";
     var ventas = ViewBag.MisCompras;
     int idCliente = ViewBag.IdCliente;
+    var contarCompras = 0; 
 }
 
 
-<div class="container">
+<div class="container" id="compras">
     <div class="row">
         <div class="col-md-12">
 
@@ -40,72 +41,69 @@
                         {
                             if (ven.FkCliente == idCliente)
                             {
-                        <tr>
-                            <td>@ven.IdVenta</td>
-                            <td>
-                                @if (ViewBag.NombreCliente != null)
-                                {@ViewBag.NombreCliente}
-                            </td>
-                            <td> @ven.Fecha</td>
-                            <td> $ @ven.Total</td>
+                                <tr>
+                                    <td>@ven.IdVenta</td>
+                                    <td>
+                                        @if (ViewBag.NombreCliente != null)
+                                        {@ViewBag.NombreCliente}
+                                    </td>
+                                    <td> @ven.Fecha</td>
+                                    <td> $ @ven.Total</td>
 
-                            <td>
-                                <table style="margin-top:1px">
-                                    <thead>
-                                        <tr>
-                                            <th>Marca y Modelo </th>
-                                            <th>Cantidad </th>
-                                            <th>Precio Venta</th>
-                                            <th>SubTotal</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @if (Model.Count() > 0)
-                                        {
-                                            foreach (var prod in Model)
-                                            {
-                                                if (prod.idVenta == ven.IdVenta)
+                                    <td>
+                                        <table style="margin-top:1px">
+                                            <thead>
+                                                <tr>
+                                                    <th>Marca y Modelo </th>
+                                                    <th>Cantidad </th>
+                                                    <th>Precio Venta</th>
+                                                    <th>SubTotal</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+
+                                                @foreach (var prod in Model)
                                                 {
-                                                    <tr>
-                                                        <td>@prod.marcaModelo</td>
-                                                        <td>@prod.cantidad</td>
-                                                        <td>@prod.precio</td>
-                                                        <td>@prod.subTotal</td>
-                                                    </tr>
+                                                    if (prod.idVenta == ven.IdVenta)
+                                                    {
+                                                        contarCompras++;
+                                                        <tr>
+                                                            <td>@prod.marcaModelo</td>
+                                                            <td>@prod.cantidad</td>
+                                                            <td>@prod.precio</td>
+                                                            <td>@prod.subTotal</td>
+                                                        </tr>
+                                                    }
                                                 }
-                                            }
-                                        }
+                                            </tbody>
+                                        </table>
 
-                                    </tbody>
-                                </table>
+                                    </td>
+                                </tr>
 
-                            </td>
-                        </tr>
 
+                            }
 
                         }
 
-                    }
-
                     </tbody>
                 </table>
-
-
             }
-            else
-
-            {
-                <br />
-                <center><h2 style="color: red">Aún no ha realizado compras</h2></center>
-                <center><h2 class="cajaCompra"><i class="fas fa-box-open"></i></h2></center>
-            }
-
 
         </div>
     </div>
 </div>
 
-
+@* Evalua si un determinado cliente no ha realizado compras *@
+@if (contarCompras == 0 )
+{
+    <br />
+    <center><h2 style="color: red">Aún no ha realizado compras</h2></center>
+    <center><h2 class="cajaCompra"><i class="fas fa-box-open"></i></h2></center>
+    <script>
+        document.getElementById("compras").style.display = "none";
+    </script>
+}
 
 
 
