--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
                                         <div class="dropdown-menu">
                                             @if (Session["UserId"] != null)
                                             {
+                                                <a class="dropdown-item" href="https://localhost:44366/Clientes/MostrarClientes">Mi Perfil</a>
                                                 <a class="dropdown-item" href="https://localhost:44366/Home/LogOut">Salir</a>
                                             }
                                             else
