--- a/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
@@ -44,7 +44,7 @@
                                     <td>@cl.direccion</td>
                                     <td>@cl.correo</td>
                                     <td>@cl.rol</td>
-                                    <td>@cl.estadoCliente</td>
+                                    <td>@cl.isActivo</td>
                                     <td width="20">
 
                                         <button class="btn btn-info "
