Validación correo único

--- a/SistemaInventario/Views/Home/Login.cshtml
+++ b/SistemaInventario/Views/Home/Login.cshtml
@@ -15,7 +15,7 @@
         @Html.AntiForgeryToken()
         <i style="color:#ae61e2; font-size: 50px" class="fas fa-user-circle"></i>
         <input type="text" name="correo" value="" placeholder="Correo" />
-        <input type="text" name="passw" value="" placeholder="Contraseña" />
+        <input type="password" name="passw" value="" placeholder="Contraseña" />
         <input style="width: 130px" type="submit" value="Iniciar Sesión" />
     </div>
 }
