--- a/SistemaInventario/Views/Usuarios/EditarOCrearUsuarios.cshtml
+++ b/SistemaInventario/Views/Usuarios/EditarOCrearUsuarios.cshtml
@@ -31,6 +31,7 @@
     <label>Correo: </label>
     @Html.TextBoxFor(x => x.correo, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.correo, null, new { @class = "text-danger" })
+    @Html.ValidationMessage("CorreoExiste", new { @class = "text-danger" })
     <label>Contraseña: </label>
     @Html.PasswordFor(x => x.pass, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.pass, null, new { @class = "text-danger" })
@@ -44,7 +45,7 @@
     @Html.ValidationMessageFor(x => x.rol, null, new { @class = "text-danger" })
     @if (Model.idUsuario > 0)
     {
-        <input type="submit" value="Guardar"/>
+        <input type="submit" value="Guardar" />
     }
     else
     {
