Ajustes para evitar errorres de excepciones

--- a/SistemaInventario/Views/Compras/AgregarOEditarCompras.cshtml
+++ b/SistemaInventario/Views/Compras/AgregarOEditarCompras.cshtml
@@ -43,7 +43,7 @@
 
 
                                         <button class="btn btn-danger"
-                                                onclick="window.location.href='/AgregarAInventario/SeleccionarProducto?id='+@car.idInventario">
+                                                onclick="window.location.href='/AgregarAInventario/SeleccionarProducto?id='+@car.fk_auto">
                                             Seleccionar
                                         </button>
 
