--- a/SistemaInventario/Views/Inventario/AgregarOEditarAutos.cshtml
+++ b/SistemaInventario/Views/Inventario/AgregarOEditarAutos.cshtml
@@ -23,7 +23,7 @@
         <div class="marca">
             <label>
                 Marca:
-                @Html.DropDownListFor(x => x.fk_marca, (IEnumerable<SelectListItem>)ViewBag.listaMarcas, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(x => x.fk_marca, (IEnumerable<SelectListItem>)ViewBag.listaMarcas, "Seleccione una marca", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.fk_marca, null, new { @class = "text-danger" })
             </label>
         </div>
